uptime/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
spec:
  selector:
    matchLabels:
      app: uptime-kuma
      release: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
        release: uptime-kuma
    spec:
      dnsConfig:
        nameservers:
        - 171.21.0.1
        - 1.1.1.1
      dnsPolicy: None
      containers:
      - image: louislam/uptime-kuma:latest
        imagePullPolicy: Always
        name: uptime-kuma
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /app/data
          name: config
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: uptime-config-claim-nfs
