uptime/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: uptime-kuma
    release: uptime-kuma
  type: ClusterIP
